# lab3-catch

./: .travis.yml  CMakeLists.txt  README.md
include/: prime.hpp
sources/: prime.cpp
tests/: prime.cpp
