cmake_minimum_required(VERSION 2.8)
project(lab3)
set(SOURCES_DIR sources)
set(TESTS_DIR tests)
set(INCLUDE_DIR include)
include_directories(${INCLUDE_DIR})
add_library(prime STATIC ${SOURCES_DIR}/prime.cpp)
add_executable(tests ${TESTS_DIR}/prime.cpp ${TESTS_DIR}/main.cpp)
target_link_libraries(tests prime)